tests/snapshots/test__tests__single_terminal-2.snap
---
source: tests/test.rs
expression: "format!(\"{:#?}\", engine)"
---
Engine {
    union: U16U16U32U32U32(
        EngineBase {
            grammar: Grammar {
                start_nonterminal: "start[0]",
                rules: "start[0] ::= \"Hello, World!\n\"[0];\n",
                id_to_regexes: {},
                id_to_suffix_automata: {},
                id_to_suffix_automata_first_bytes: [],
                id_to_regex_first_bytes: [],
                id_to_regex_complement_first_bytes: [],
                id_to_terminals: [
                    (
                        "\"Hello, World!\n\"[0]",
                        [
                            72,
                            101,
                            108,
                            108,
                            111,
                            44,
                            32,
                            87,
                            111,
                            114,
                            108,
                            100,
                            33,
                            10,
                        ],
                    ),
                ],
            },
            allowed_first_bytes: [
                44,
            ],
            allowed_token_ids: [
                ",[45]",
            ],
            earley_sets: [
                [
                    EarleyItemDebugStruct {
                        dotted_rule: "start[0] -> .\"Hello, World!\n\"[0]",
                        start_position: 0,
                        state: "[0]",
                    },
                ],
                [
                    EarleyItemDebugStruct {
                        dotted_rule: "start[0] -> .\"Hello, World!\n\"[0]",
                        start_position: 0,
                        state: "[5]",
                    },
                ],
            ],
            cache: [
                (
                    [
                        [
                            EarleyItemDebugStruct {
                                dotted_rule: "start[0] -> .\"Hello, World!\n\"[0]",
                                start_position: 0,
                                state: "[0]",
                            },
                        ],
                    ],
                    (
                        [
                            "H[73]",
                            "He[1095]",
                            "Hel[6003]",
                            "Hell[23725]",
                            "Hello[33155]",
                        ],
                    ),
                ),
                (
                    [
                        [
                            EarleyItemDebugStruct {
                                dotted_rule: "start[0] -> .\"Hello, World!\n\"[0]",
                                start_position: 0,
                                state: "[0]",
                            },
                        ],
                        [
                            EarleyItemDebugStruct {
                                dotted_rule: "start[0] -> .\"Hello, World!\n\"[0]",
                                start_position: 0,
                                state: "[5]",
                            },
                        ],
                    ],
                    (
                        [
                            ",[45]",
                        ],
                    ),
                ),
            ],
            to_be_completed_items: [],
            to_be_completed_items_buffer: [],
            deduplication_buffer: [],
            postdot_items: [],
            postdot_items_since_last_commit: [],
            leo_items: [],
            leo_items_buffer: [],
            finished: false,
            config: EngineConfig {
                cache_enabled: true,
                compaction_enabled: true,
            },
        },
    ),
}
